--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -71,7 +71,7 @@ en: &DEFAULT_EN
   about:
     title: "About Us"
     text: "our story"
-    body: "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde. **Markdown** supported."
+    body: " A team of four students motivated to create a stylish website **Markdown** supported."
     section: about
 
   clients:
