--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -21,10 +21,8 @@ en: &DEFAULT_EN
       section: timeline
     - title: "Team"
       section: team
-    - title: "Contact"
-      section: contact
-    - title: "Theme Source"
-      url: https://github.com/raviriley/agency-jekyll-theme/
+    #- title: "Contact"
+      #section: contact
 en-US:
   <<: *DEFAULT_EN
 en-CA:
