--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,6 +15,8 @@ en: &DEFAULT_EN
       section: services
     - title: "Portfolio"
       section: portfolio
+    - title: "Friends"
+      section: friends
     - title: "About"
       section: about
     - title: "Timeline"
