--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -27,13 +27,13 @@ en: &DEFAULT_EN
     people:
       - name: "en M'Rad Imane"
         first: "B"
-        role: "SV student 🧪"
+        role: "SV student 🧬"
       - name: "ormann Alexia"
         first: "D"
         role: "SV student 💻🧬"
       - name: "ifak Imane"
         first: "W"
-        role: "SV student 🔬"
+        role: "SV student 🔬📊"
       - name: "affei Theo"
         first: "M"
         role: "SV student 🧬"
