--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,6 +15,8 @@ en: &DEFAULT_EN
       section: introduction
     - title: "Team"
       section: team
+    - title: "Story example"
+      section: story-ex
 en-US:
   <<: *DEFAULT_EN
 en-CA:
